--- a/home/apps/waybar/style.css
+++ b/home/apps/waybar/style.css
@@ -1,4 +1,119 @@
- * {
+* {
   font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+  font-weight: normal;
   font-size: 13px;
+}
+
+window#waybar {
+  background-color: rgba(0, 0, 0, 0);
+  color: #ffffff;
+}
+
+#workspaces button {
+  color: #ffffff;
+  padding: 0 4px;
+  margin: 4px;
+  border-radius: 100px;
+}
+
+#workspaces button.empty {
+  color: #777777;
+}
+
+#workspaces button:hover {
+  color: #000000;
+}
+
+#workspaces button.active {
+  background-color: rgba(39, 103, 204, 1);
+  color: #ffffff;
+}
+
+#taskbar button {
+  color: #ffffff;
+  padding: 0 4px;
+  margin: 4px;
+  border-radius: 100px;
+}
+
+#taskbar button.active {
+  border-color: rgba(39, 103, 204, 1);
+  border-width: 1px;
+}
+
+#groupclock {
+  background-color: rgba(0, 0, 0, 0.7); 
+  /*background-clip: padding-box, border-box;
+  background-origin: border-box; */
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+#clock.clock {
+  min-width: 5.5em;
+  background-color: rgba(39, 103, 204, 1);
+  border-radius: 20px;
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  font-weight: bold;
+}
+
+#clock.date {
+  margin: 0px 20px 0px 20px;
+}
+
+#custom-revborder-mid-left {
+  background-color: rgba(255, 0, 0, 0);
+  box-shadow: 0 -20px 0 0 rgba(0, 0, 0, 0.7);
+  min-width: 20px;
+  border-top-right-radius: 20px;
+  margin-right: -1px
+}
+
+#custom-revborder-mid-right {
+  background-color: rgba(255, 0, 0, 0);
+  box-shadow: 0 -20px 0 0 rgba(39, 103, 204, 1);
+  min-width: 20px;
+  border-top-left-radius: 20px;
+  margin-left: -1px;
+}
+
+#groupleft {
+  background-color: rgba(0, 0, 0, 0.7); 
+  padding: 0 20px 0 20px;
+  border-bottom-right-radius: 20px;
+}
+
+#custom-revborder-left {
+  background-color: rgba(255, 0, 0, 0);
+  box-shadow: 0 -20px 0 0 rgba(0, 0, 0, 0.7);
+  min-width: 20px;
+  border-top-left-radius: 20px;
+  margin-left: -1px;
+}
+
+#custom-revborder-right {
+  background-color: rgba(255, 0, 0, 0);
+  box-shadow: 0 -20px 0 0 rgba(0, 0, 0, 0.7);
+  min-width: 20px;
+  border-top-right-radius: 20px;
+  margin-right: -1px;
+}
+
+#groupright {
+  background-color: rgba(0, 0, 0, 0.7); 
+  padding: 0 20px 0 20px;
+  border-bottom-left-radius: 20px;
+}
+
+#network {
+  min-width: 11em;
+}
+
+#cpu,
+#memory,
+#backlight,
+#wireplumber {
+  min-width: 4.2em;
 }
