--- a/home/apps/waybar/style.css
+++ b/home/apps/waybar/style.css
@@ -12,7 +12,7 @@
 }
 
 window#waybar {
-  background-image: linear-gradient(180deg, @background 0%, rgba(0, 0, 0, 0) 100%);
+  /*background-image: linear-gradient(180deg, @background -50%, rgba(0, 0, 0, 0) 100%); */
   color: @text;
 }
 
