--- a/home/services/swaync/style.css
+++ b/home/services/swaync/style.css
@@ -1,189 +1,6 @@
+
 @import "../../.cache/hellwal/waybar-colors.conf";
-@define-color primary @color4;
-@define-color secondary @color12;
-@define-color background-alt lighter(@background);
-@define-color hover @color6;
+@import "./styles/colors.css";
+@import "./styles/floating.css";
+@import "./styles/notification-center.css";
 
-* {
-  all: unset;
-  font-size: 14px;
-  font-family: "JetBrains Mono Nerd Font 10";
-  transition: 50ms;
-}
-
-.background {
-  background-color: rgba(0, 0, 0, 0.01);
-}
-
-.control-center {
-  background-color: alpha(@background, 0.8);
-  padding: 24px;
-  border-radius: 24px;
-  border: 2px solid alpha(@primary, 0.7);
-  color: @foreground;
-  box-shadow: 0 0 10px 0 rgba(0,0,0,.6);
-}
-
-/* DND */
-
-.widget-dnd {
-  background: alpha(@background-alt, 0.5);
-  margin: 6px 0;
-  padding: 16px;
-  border-radius: 16px;
-}
-
-switch {
-  background: none;
-  border: 2px solid @primary;
-  border-radius: 20px;
-  color: transparent;
-}
-
-switch:checked {
-  background: @primary;
-}
-
-switch slider {
-  background: alpha(@primary, 0.5);
-  border-radius: 20px;
-  border-color: alpha(@background-alt, 0.5);
-  border-width: 2px;
-  border-style: solid;
-}
-
-switch slider:hover {
-  background: @hover;
-}
-
-/* Title */
-
-.widget-title {
-   margin: 6px 0;
-   padding: 16px;
-}
-
-.widget-title>label {
-  font-size: 16px;
-}
-
-.widget-title button {
-  padding: 2px 8px;
-  border-radius: 24px;
-  border-color: @primary;
-  border-width: 2px;
-  border-style: solid;
-  background: @background;
-  color: @primary;
-}
-
-.widget-title button:hover {
-  background: @hover;
-  color: @background;
-}
-
-/* Backlight */
-
-.widget-backlight {
-  background: alpha(@background-alt, 0.5);
-  margin: 6px 0;
-  padding: 16px;
-  border-radius: 16px;
-}
-
-/* Volume */
-
-.widget-volume {
-  background: alpha(@background-alt, 0.5);
-  margin: 6px 0;
-  padding: 16px;
-  border-radius: 16px;
-}
-
-.widget-volume button {
-  min-width: 20px;
-  border-radius: 4px;
-}
-
-.widget-volume button:hover {
-  background: @primary;
-  color: @background;
-}
-
-.widget-volume .per-app-volume {
-  margin: 8px;
-  padding: 8px 16px;
-  background: alpha(@primary, 0.1);
-  border-radius: 12px;
-}
-
-/* Sliders */
-
-scale trough highlight {
-  border-radius: 10px;
-  background: @primary;
-}
-
-scale trough highlight:hover {
-  background: @hover;
-}
-
-scale trough {
-  margin: 0rem 1rem;
-  background-color: alpha(@primary, 0.2);
-  min-height: 12px;
-  border-radius: 10px;
-}
-
-scale slider {
-  background: @primary;
-}
-
-/* Buttons Grid */
-
-.widget-buttons-grid {
-  background-color: alpha(@background-alt, 0.5);
-  padding: 8px;
-  border-radius: 16px;
-}
-
-.widget-buttons-grid>flowbox>flowboxchild>button {
-  padding: 12px 8px;
-  margin: 4px 8px;
-  min-width: 90px;
-  background-color: alpha(@secondary, 0.2);
-  border-radius: 16px;
-}
-
-.widget-buttons-grid>flowbox>flowboxchild>button:hover {
-  background: @hover;
-  color: @background;
-}
-
-/* MPRIS */
-
-.widget-mpris {
-  margin: 16px 0 0 0;
-  padding: 4px;
-}
-
-.widget-mpris-player {
-  border-radius: 16px;
-  background-color: alpha(@background-alt, 0.8);
-  margin: 0px 8px;
-  padding: 16px 16px;
-}
-
-.widget-mpris-album-art {
-  min-width: 60px;
-}
-
-.widget-mpris-title {
-  font-size: 1rem;
-  font-weight: 700;
-}
-
-.widget-mpris.subtitle {
-  font-size: 0.7rem;
-  font-weight: 400;
-}
