--- a/modules/home/desktop/features/swaync/styles/notification-center.css
+++ b/modules/home/desktop/features/swaync/styles/notification-center.css
@@ -1,6 +1,6 @@
 * {
   font-size: 14px;
-  font-family: FontAwesome, "JetBrains Mono Nerd Font 10";
+  font-family: "Font Awesome 6 Free";
   transition: 50ms;
 }
 
