add apple fonts

--- a/modules/home/desktop/features/swaync/styles/notification-center.css
+++ b/modules/home/desktop/features/swaync/styles/notification-center.css
@@ -1,6 +1,6 @@
 * {
   font-size: 14px;
-  font-family: "Font Awesome 6 Free";
+  font-family: "Roboto", "JetBrainsMono Nerd Font";
   transition: 50ms;
 }
 
